--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>闪电五连鞭</title>
+    <style>
+        h1 {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>闪电五连鞭</h1>
