--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>闪电五连鞭</title>
+    <title>你们给我打钱否则赏你闪电五连鞭</title>
     <style>
         h1 {
             color: red;
