--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>你们给我打钱否则赏你闪电五连鞭</title>
+    <title>闪电五连鞭</title>
     <style>
         h1 {
             color: red;
@@ -11,7 +11,18 @@
     </style>
 </head>
 <body>
-    <h1>闪电五连鞭</h1>
+    <h1>你们给我打钱否则赏你闪电五连鞭</h1>
     <img src="Ma.gif" alt="">
+    <img src="1.jpg"  alt="">
+    <img src="2.jpg"  alt="">
+    <img src="3.jpg"  alt="">
+    <img src="4.jpg"  alt="">
+    <img src="5.jpg"  alt="">
+    <img src="6.jpg"  alt="">
+    <img src="7.jpg"  alt="">
+    <img src="8.jpg"  alt="">
+    <img src="9.jpg"  alt="">
+    <img src="10.jpg"  alt="">
+
 </body>
 </html>
