--- a/index.html
+++ b/index.html
@@ -11,18 +11,8 @@
     </style>
 </head>
 <body>
-    <h1>你们给我打钱否则赏你闪电五连鞭</h1>
+    <h1>闪电五连鞭</h1>
     <img src="Ma.gif" alt="">
-    <img src="1.jpg"  alt="">
-    <img src="2.jpg"  alt="">
-    <img src="3.jpg"  alt="">
-    <img src="4.jpg"  alt="">
-    <img src="5.jpg"  alt="">
-    <img src="6.jpg"  alt="">
-    <img src="7.jpg"  alt="">
-    <img src="8.jpg"  alt="">
-    <img src="9.jpg"  alt="">
-    <img src="10.jpg"  alt="">
 
 </body>
 </html>
