--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>闪电五连鞭</h1>
-    <img src="Ma.gif" alt="">
+    <img src="Ma.gif" alt="" width="100%">
 
 </body>
 </html>
